fixed overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   position: relative;
   min-height: 90vh;
   min-width: 100vw;
+  overflow-x: hidden;
 }
 
 nav {
